platforms/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Headlamp
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: headlamp.png
    gethomepage.dev/description: Kubernetes dashboard
    gethomepage.dev/href: "https://headlamp.home.arpa/"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=headlamp"
    gethomepage.dev/showStats: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - headlamp.home.arpa
      secretName: headlamp-tls
  rules:
    - host: headlamp.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
